test/e2e/testdata/.snapshots/TestSetupFailureFlow/Invalid_Private_Key/POST_api_atlas_v2_groups_b0123456789abcdef012345b_databaseUsers_1.snaphost
HTTP/2.0 401 Unauthorized
Content-Length: 106
Content-Type: application/json
Date: Mon, 28 Jul 2025 05:15:13 GMT
Server: mdbws
Www-Authenticate: Digest realm="MMS Public API", domain="", nonce="AruON2uCBEzFsLx01E9r1xHzPGwdgFBH", algorithm=MD5, qop="auth", stale=false
X-Envoy-Upstream-Service-Time: 10

{
  "error" : 401,
  "reason" : "Unauthorized",
  "detail" : "You are not authorized for this resource."
}